--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,221 +1,84 @@
 // containers
 // container of info and history
-.page {
-  background-color: white;
-  display: flex;
-  inline-size: auto;
-  justify-content: space-around;
+.page-oranger{
+  background-color: orange;
+  height: 65vh;
 }
-#profile {
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  height: 570px;
+#page-bluer {
+  height: 83vh;
+  padding-left: 40px;
+  padding-right: 40px;
+  background-color: blue;
 }
 // CARD CONTAINER
-#user-details {
+#page-greener {
+  background-color: green;
+  width: 60vh;
   padding: 20px;
-  display: flex;
-  font-size: 16px;
+  margin-bottom: 20px;
   border-radius: 8px;
-   box-shadow: 3px 5px rgb(223, 223, 223);
-   opacity: 0.8;
+  margin-left: 4vh;
 }
-#user-details:hover {
-  opacity: 1;
-}
+// #page-greener:hover {
+//   transform: scale(1.1);
+// }
 
-// HISTORY CONTAINER
-#user-history {
-  background-color: white;
-  position: relative;
-  padding: 40px;
-  display: flex;
-  font-size: 16px;
-  margin-left: 20px;
-  border-radius: 8px;
-
-}
-#user-history p {
-  font-size: 16px;
-}
 // RESERVATION CONTAINER
-#user-reservation {
-  background-color: white;
-  position: relative;
-  padding: 40px 60px;
-  display: inline-block;
-  font-size: 16px;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-inline-end: auto;
-  width: -webkit-fill-available;
+#page-reder {
+  background-color: red;
+  width: 120vh;
+  margin-top: 16px;
+  margin-left: 4vh;
+  padding: 20px;
   border-radius: 8px;
-  box-shadow: 3px 5px rgb(223, 223, 223);
-  opacity: 0.8;
+  height: 31vh;
 }
-#user-reservation:hover {
+#page-reder:hover {
   opacity: 1;
 }
-
-// header
-.page-head {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  padding-left: 50px;
+#table-yellower {
+  background-color: greenyellow;
+  justify-content: space-around;
 }
-// buttons
-.edit-btn {
-  margin-top: 24px;
+#table-pinker {
+  background-color: hotpink;
 }
 
-#profile {
-  margin: 40px;
-}
-.show-more {
-  text-align: right;
-  margin-top: 8px;
-}
-table {
-  width: 100%;
-  align-content: space-between;
-  text-align: justify;
-  border-spacing: 8px;
-}
-// rows
-.id-row {
-  width: fit-content;
-  text-align: left;
-}
-.date-row {
-  width: 100px;
-  text-align: center;
-}
-.amount-row {
-  width: 100px;
-  text-align: right;
+// svg for the welcome name
+svg {
+  font-weight:bold;
+  max-width:400px;
+  height:auto;
 }
 
 
-// @media(max-width: 992px) {
-//   #user-detail {
-//     width: auto;
-//     height:auto;
+
+
+
+
+// css for the glowing name
+// .welcome-name {
+//   background: 50% 100% / 50% 50% no-repeat
+//               radial-gradient(ellipse at bottom, rgb(129, 128, 128), transparent, transparent);
+//   -webkit-background-clip: text;
+//   background-clip: text;
+//   color: transparent;
+//   font-size: 10vw;
+//   font-family: "Source Sans Pro", sans-serif;
+//   animation: reveal 3000ms ease-in-out forwards 200ms,
+//              glow 2500ms linear infinite 2000ms;
+
+//   @keyframes reveal {
+//     80%{
+//       letter-spacing: 8px;
+//     }
+//     100% {
+//       background-size: 300% 300%;
+//     }
 //   }
-//    #user-reservation {
-//     width: auto;
-//     width: auto;
+//   @keyframes glow {
+//     40% {
+//       text-shadow: 0 0 8px #fff;
+//     }
 //   }
-// }
-
-// @media(max-width: 768px) {
-//   #profile {
-//     flex-direction: column;
-//   }
-//   #user-detail {
-//     width: 100%;
-//     height: 50%;
-//   }
-// }
-// @media(max-width: 576px) {
-//   .cards {
-
-//   }
-// }
-
-
-
-// tab
-/* Style the tab */
-// .tab {
-//   overflow: hidden;
-//   border: 1px solid #ccc;
-//   background-color: #f1f1f1;
-// }
-
-/* Style the buttons that are used to open the tab content */
-// .tab button {
-//   background-color: inherit;
-//   float: left;
-//   border: none;
-//   outline: none;
-//   cursor: pointer;
-//   padding: 14px 16px;
-//   transition: 0.3s;
-// }
-
-/* Change background color of buttons on hover */
-// .tab button:hover {
-//   background-color: #ddd;
-// }
-
-/* Create an active/current tablink class */
-// .tab button.active {
-//   background-color: #ccc;
-// }
-
-/* Style the tab content */
-// .tabcontent {
-//   display: none;
-//   padding: 6px 12px;
-//   border: 1px solid #ccc;
-//   border-top: none;
-// }
-
-
-
-
-// //animated text
-
-// div {
-//   display:inline-block;
-//   overflow:hidden;
-//   white-space:nowrap;
-// }
-
-// div:first-of-type {    /* For increasing performance
-//                        ID/Class should've been used.
-//                        For a small demo
-//                        it's okaish for now */
-//   animation: showup 7s infinite;
-// }
-
-// div:last-of-type {
-//   width:0px;
-//   animation: reveal 7s infinite;
-// }
-
-// div:last-of-type span {
-//   margin-left:-355px;
-//   animation: slidein 7s infinite;
-// }
-
-// @keyframes showup {
-//     0% {opacity:0;}
-//     20% {opacity:1;}
-//     80% {opacity:1;}
-//     100% {opacity:0;}
-// }
-
-// @keyframes slidein {
-//     0% { margin-left:-800px; }
-//     20% { margin-left:-800px; }
-//     35% { margin-left:0px; }
-//     100% { margin-left:0px; }
-// }
-
-// @keyframes reveal {
-//     0% {opacity:0;width:0px;}
-//     20% {opacity:1;width:0px;}
-//     30% {width:355px;}
-//     80% {opacity:1;}
-//     100% {opacity:0;width:355px;}
-// }
-
-
-// p {
-//   font-size:12px;
-//   color:#999;
-//   margin-top:200px;
 // }
