--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar sticky-top navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to  root_path, class: "navbar-brand" do %>hero
+  <%= link_to  root_path, class: "navbar-brand" do %>
     <img style="width: 140px;" src="https://res.cloudinary.com/dnxriaa8a/image/upload/v1637081784/logo_oceanbnb_ufxktn.png" alt="logo">
   <% end %>
 
