--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,32 +1,48 @@
 <div class="yacht-container container-fluid">
-<h3 class="page-title">Discover all of our Yachts</h3>
-
-<div class="row justify-content-evenly">
-    <% @yachts.each do |yacht| %>
-      <%= link_to yacht_path(yacht) do %>
-    <div class="col-12 col-md-6 col-lg-4">
-      <div class="yacht-card">
-          <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"><%= link_to yacht.name, yacht_path(yacht) %></h5>
-            <p class="card-text-yacht"><strong style="color: #333333">Description:</strong> <%= yacht.description %></p>
-            <div class="card-bottom d-flex justify-content-between">
-              <div class="card-bottom-info">
-              <p class="card-text-yacht"><strong style="color: #333333">Price per day: €</strong><%= number_with_delimiter(yacht.price, :delimiter => ',') %></p>
-              <p class="card-text-yacht"><strong style="color: #333333">Capacity: </strong><%= yacht.capacity %></p>
-            </div>
-              <div class="card-bottom-button">
-              <%= link_to yacht_path(yacht) do %>
-              <p class="btn btn-light index-card-button">View</p>
-                            <% end %>
-
+  <h3 class="page-title">Discover all of our Yachts</h3>
+  <div class="full-page-container row justify-content-evenly">
+    <div class="yacht-list-container col-8">
+      <div class="row justify-content-evenly">
+        <% @yachts.each do |yacht| %>
+        <%= link_to yacht_path(yacht) do %>
+        <div class="col-12 col-md-8 col-lg-6">
+          <div class="yacht-card">
+            <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to yacht.name, yacht_path(yacht) %></h5>
+              <p class="card-text-yacht"><strong style="color: #333333">Description:</strong> <%= yacht.description %></p>
+              <div class="card-bottom d-flex justify-content-between">
+                <div class="card-bottom-info">
+                  <p class="card-text-yacht">
+                  <strong style="color: #333333">Price per day: €</strong><%= number_with_delimiter(yacht.price, :delimiter => ",") %>
+                  </p>
+                  <p class="card-text-yacht">
+                  <strong style="color: #333333">Capacity: </strong><%= yacht.capacity %>
+                  </p>
+                </div>
+                <div class="card-bottom-button">
+                  <%= link_to yacht_path(yacht) do %>
+                  <p class="btn btn-light index-card-button">View</p>
+                  <% end %>
+                </div>
               </div>
             </div>
           </div>
+        </div>
+        <% end %>
+        <% end %>
+        </div>
       </div>
+    <div class="index-map-container col-4">
+      <div class="first-show-card bg-white rounded shadow" id="map-container">
+        <div id="map" style="width: 100%; height: 600px;"
+          data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>">
+        </div>
       </div>
-              <% end %>
-    <% end %>
+    </div>
+    </div>
+
   </div>
 </div>
 
