--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,11 +1,11 @@
 <div class="yacht-container container-fluid">
   <h3 class="page-title">Discover all of our Yachts</h3>
   <div class="full-page-container row justify-content-evenly">
-    <div class="yacht-list-container col-8">
+    <div class="yacht-list-container col-4">
       <div class="row justify-content-evenly">
         <% @yachts.each do |yacht| %>
         <%= link_to yacht_path(yacht) do %>
-        <div class="col-12 col-md-8 col-lg-6">
+        <div class="col-12 col-md-8 col-lg-12">
           <div class="yacht-card">
             <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -33,9 +33,9 @@
         <% end %>
         </div>
       </div>
-    <div class="index-map-container col-4">
-      <div class="first-show-card bg-white rounded shadow" id="map-container">
-        <div id="map" style="width: 100%; height: 600px;"
+    <div class="index-map-container col-8">
+      <div class="second-show-card bg-white rounded shadow" id="map-container">
+        <div id="map" style="width: 100%; height: 1000px;"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>">
         </div>
