created search box

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/navbar' %>
+
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://yachtcharters.rentals/wp-content/uploads/2018/05/home-banner.jpg);">
   <div class="home-container row flex-column align-items-center">
     <div class="align-items-center" style="color:white;">
