--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <%# <%= render 'shared/navbar'  ------ copied to every pages %>
     <%= render 'shared/flashes' %>
     <%= yield %>
   </body>
