--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -73,12 +73,11 @@ body{
   }
 }
 
-
 .card-img-top{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   object-fit: cover;
-  height: 260px;
+  height: 220px;
   opacity: 1;
   transition: 0.5s;
 }
@@ -149,4 +148,14 @@ body{
 
 .second-show-card{
   border-radius: 8px;
+}
+
+
+
+@media only screen and (max-width: 1100px) {
+  .index-map-container{
+  display: none;
+  }
+
+
 }
