--- a/app/views/shared/_search-navbar.html.erb
+++ b/app/views/shared/_search-navbar.html.erb
@@ -4,18 +4,14 @@
   <% end %>
 
   <%# -----search box ------ %>
-  <div class="search-box">
-    <%= form_tag yachts_path, method: :get do %>
-    <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search" %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
-    <% end %>
-    <div class="row justify-content-center">
-      <div class="col-sm-8">
-        <div id="yacht-search">
-        </div>
-      </div>
+      <div class="">
+      <%= form_tag yachts_path, method: :get, class: 'row' do %>
+      <%= text_field_tag :query, params[:query], class: "form-control col-8", placeholder: "Search" %>
+      <%= submit_tag "Search", class: "btn btn-primary col-4 submit-search" %>
+      <%= submit_tag "Search", class: "btn btn-primary col-4 submit-search" %> <i class="fas fa-search"></i>
+      <% end %>
     </div>
-  </div>
+
 
   <%# -----search box ------ %>
 
