--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -52,7 +52,7 @@
     </div>
 
     <div class="first-show-card bg-white rounded shadow col-4" id="map-container">
-      <div id="map" class = ""
+      <div id="map2" class = ""
         style="width: 100%; height: 600px;"
         data-location="<%= @location_marker.to_json %>"
         data-markers="<%= @markers.to_json %>"
