--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -21,27 +21,27 @@ body{
 
 
 .yacht-container{
-  margin-top: 50px;
+  margin-top: 6.7vh;
   width: 95%;
 }
 
 .page-title{
   text-align: left;
-  margin-bottom: 50px;
+  margin-bottom: 6vh;
   font-family: Shippori Antique B1;
 }
 
 .card-title{
-  font-size: 16px;
+  font-size: 2.1vh;
   font-weight: bold;
 }
 
 .col-3{
-  margin-bottom: 20px;
+  margin-bottom: 2.6vh;
 }
 
 .card-button{
-  font-size: 10px;
+  font-size: 1.3vh;
   margin-bottom: 0;
   border-radius: 8px;
   padding: auto 4px;
@@ -53,11 +53,11 @@ body{
 
 // Yacht Card Style
 .yacht-card{
-  margin-bottom: 30px;
+  margin-bottom: 4vh;
   border-radius: 8px;
   border: none;
-  font-size: 12px;
-  height: 55vh;
+  font-size: 1.6vh;
+  height: 50vh;
   overflow: hidden;
   box-shadow: 0px 0px 5px rgb(219, 219, 219);
   transition: 0.5s;
@@ -77,7 +77,7 @@ body{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   object-fit: cover;
-  height: 220px;
+  height: 45%;
   opacity: 1;
   transition: 0.5s;
 }
@@ -100,13 +100,13 @@ body{
 
 .card-text-yacht{
   display: -webkit-box;
-  max-width: 400px;
+  max-width: 53.6vh;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 0;
   text-overflow: ellipsis;
   overflow: hidden;
-  font-size: 14px;
+  font-size: 1.8vh;
 }
 // /* Style the video: 100% width and height to cover the entire window */
 .myVideo {
@@ -125,7 +125,7 @@ body{
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
   width: 100%;
-  padding: 20px;
+  padding: 2.6vh;
   z-index: 0;
 }
 
@@ -134,6 +134,7 @@ body{
   padding: 8px 24px;
   background-color: rgb(232, 232, 232);
   border-radius: 24px;
+  width: 15vh;
 }
 
 .index-map-container{
