--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -36,7 +36,7 @@
       </div>
     <div class="index-map-container col-0 col-8">
       <div class="second-show-card bg-white rounded shadow" id="map-container">
-        <div id="map" style="width: 100%; height: 900px;"
+        <div id="map" style="width: 100%; height: 120vh;"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>">
         </div>
