--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -4,6 +4,11 @@
   <div class="full-page-container row justify-content-evenly">
     <div class="yacht-list-container col-sm-12 col-lg-4">
       <div class="row justify-content-evenly">
+      <% if @yachts.length == 0 %>
+        <div class="col-12 col-md-6 col-lg-12">
+              <h5 class="card-title text-center">No matches...</h5>
+        </div>
+      <% end %>
         <% @yachts.each do |yacht| %>
         <%= link_to yacht_path(yacht) do %>
         <div class="col-12 col-md-6 col-lg-12">
