--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -137,13 +137,12 @@ body{
 }
 
 .index-map-container{
-  z-index:100;
   border-radius: 8px;
   position: fixed;
   width: 100%;
   left: 35%;
-  top: 1%;
-
+  top: 7vh;
+  z-index:0;
 }
 
 .second-show-card{
