--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/search-navbar' %>
 <div class="yacht-container container-fluid">
   <h3 class="page-title">Discover all of our Yachts</h3>
-  <div class="full-page-container row justify-content-evenly">
+  <div class="full-page-container row justify-content-evenly" style="padding-bottom: 9vh;">
     <div class="yacht-list-container col-sm-12 col-lg-4">
       <div class="row justify-content-evenly">
       <% if @yachts.length == 0 %>
