--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,5 +7,7 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.6);
   box-shadow: 0 -1px 5px rgb(205, 205, 205);
-
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
