--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,8 @@
 // Specific CSS for your home-page
 
 .home-card-container{
-  padding: 0;
-  margin: 9vh 5% 5vh 5%;
+  padding: 0 0 115px 0;
+  margin: 7vh 5% 0 5%;
 }
 
 .banner h1{
