--- a/app/views/shared/_search-navbar.html.erb
+++ b/app/views/shared/_search-navbar.html.erb
@@ -5,29 +5,7 @@
 
   <%# -----search box ------ %>
   <div class="bar">
-
     <!-- Example single danger button -->
-    <div class="btn-group">
-      <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-
-      </button>
-      <div class="dropdown-menu">
-          <form>
-            <div class="form-group">
-              <label for="formControlRange">Price</label>
-              <input type="range" class="form-control-range" id="formControlRange">
-            </div>
-          </form>
-          <form>
-            <div class="form-group">
-              <label for="formControlRange">Capacity</label>
-              <input type="range" class="form-control-range" id="formControlRange">
-            </div>
-          </form>
-        </div>
-      </div>
-
-
     <div class="nav-box">
       <%= form_tag yachts_path, method: :get, class: 'row' do %>
       <%= text_field_tag :query, params[:query], class: "form-control col-8", placeholder: "Search" %>
@@ -35,15 +13,20 @@
       <% end %>
     </div>
   </div>
-
-
-
   <%# -----/search box ------ %>
 
+<%# <ul class="list-inline tabs-underlined">
+  <li>
+    <a href="#" class="tab-underlined active">All</a>
+  </li>
+  <li>
+    <a href="#" class="tab-underlined">Prices</a>
+  </li>
+  <li>
+    <a href="#" class="tab-underlined">Capacity</a>
+  </li>
+</ul> %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
