changed form class names

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,5 +1,5 @@
 // search input
-.form-control {
+.search-form-field {
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
   width: 64vh;
