--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -73,6 +73,13 @@ body{
   }
 }
 
+.marina-text{
+  margin-top: 10px;
+  color: #333333;
+  font-size: 12px;
+  width: 100%;
+}
+
 .card-img-top{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
