--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,6 +12,27 @@
     <% end %>
   </div>
 </div>
+
+<div class="marina-icons container justify-content-evenly">
+  <div class="row marina-row">
+    <div class="col-4 marina-icon">
+      <%= image_tag 'anchor.png', alt: ''%>
+      <p class="marina-text"> Your yacht is an extension of yourself. A statement of your lifestyle. She needs to deliver unforgettable experiences for you, your family and friends.</p>
+    </div>
+    <div class="col-4 marina-icon">
+      <%= image_tag 'yacht.png', alt: ''%>
+      <p class="marina-text">Every yacht is designed with our forward-thinking mentality and crafted with meticulous attention to detail.</p>
+    </div>
+    <div class="col-4 marina-icon">
+      <%= image_tag 'ocean.png', alt: ''%>
+      <p class="marina-text">So whether you’re dashing across the water or moored in your favourite bay, you will recognise the difference our design and details make, inside and out.</p>
+    </div>
+
+  </div>
+
+</div>
+
+
 <div class="home-card-container">
   <h1 style="font-family: Shippori Antique B1">Discover our experiences</h1>
 
