--- a/app/views/shared/_search-navbar.html.erb
+++ b/app/views/shared/_search-navbar.html.erb
@@ -6,7 +6,7 @@
   <%# -----search box ------ %>
     <!-- Example single danger button -->
   <%= form_tag yachts_path, method: :get, class: "yacht-search-form" do %>
-  <%= text_field_tag :query, params[:query], autocomplete: "off", class: "form-control search-form-field", placeholder: "Monaco" %>
+  <%= text_field_tag :query, params[:query], autocomplete: "off", class: "form-control search-form-field", placeholder: "Explore..." %>
   <%= submit_tag "Search", class: "btn btn-primary submit-search"  %>
   <% end %>
 
