--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -129,6 +129,14 @@ body{
   z-index: 0;
 }
 
+.index-card-submit-button{
+  width: 80%;
+  margin-top: 15px;
+  padding: 8px 16px;
+  background-color: rgb(232, 232, 232);
+  border-radius: 24px;
+}
+
 .index-card-button{
   margin-top: 15px;
   padding: 8px 24px;
