--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -23,7 +23,7 @@
           <h4>Reserve your dates</h4>
           <%= f.input :start_date, as: :string, required: false, input_html: { class: "datepickerstart" } %>
           <%= f.input :end_date, as: :string, required: false, input_html: { class: "datepickerend" } %>
-          <%= f.submit "Make Reservation", class: "btn btn-light index-card-button" %>
+          <%= f.submit "Make Reservation", class: "btn btn-light index-card-submit-button" %>
         <% end %>
         </div>
       </div>
