--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -74,10 +74,13 @@ body{
 }
 
 .marina-text{
-  margin-top: 10px;
+  font-size: 14px;
   color: #333333;
-  font-size: 12px;
-  width: 100%;
+  text-align: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 80%;
 }
 
 .card-img-top{
