--- a/app/assets/stylesheets/yachts/_show.scss
+++ b/app/assets/stylesheets/yachts/_show.scss
@@ -38,6 +38,17 @@
 // MAP container
 #map-container {
   background-color: blue;
+
+}
+@media(max-width: 1200px){
+    #map-container {
+    margin: 3% 0;
+  }
+}
+@media(max-width: 992px){
+  .reserve_ammenities{
+    margin-top: 3%;
+  }
 }
 
 .first-show-card{
@@ -85,6 +96,15 @@
   justify-content: space-around;
   font-size: 16px;
 }
+.card-text-yacht-details{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-bottom: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: 14px;
+}
 
 .capacity {
   font-size: 16px;
@@ -96,4 +116,14 @@
 
 .ammenities-body li{
   font-size: 12px;
+}
+
+.card-text-ammenities{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-bottom: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: 14px;
 }
