fixed profile welcome name overflow

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,7 +2,7 @@
 
 <%# WELCOME TITLE %>
 <div class="welcome-name">
-  <svg viewbox="0 0 100 30">
+  <svg viewbox="0 0 100 30" preserveAspectRatio="xMidYMid meet">
     <defs>
       <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="0.5">
         <stop offset="5%" stop-color="#00aeff"/>
