--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -32,7 +32,7 @@ body{
 }
 
 .card-title{
-  font-size: 16px;
+  font-size: 2.1vh;
   font-weight: bold;
 }
 
@@ -116,7 +116,7 @@ body{
   margin-bottom: 0;
   text-overflow: ellipsis;
   overflow: hidden;
-  font-size: 14px;
+  font-size: 1.8vh;
 }
 // /* Style the video: 100% width and height to cover the entire window */
 .myVideo {
@@ -141,15 +141,15 @@ body{
 
 .index-card-submit-button{
   width: 80%;
-  margin-top: 15px;
-  padding: 8px 16px;
+  margin-top: 2vh;
+  padding: 1vh 2.14vh;
   background-color: rgb(232, 232, 232);
   border-radius: 24px;
 }
 
 .index-card-button{
-  margin-top: 15px;
-  padding: 8px 24px;
+  margin-top: 2vh;
+  padding: 1vh 23vh;
   background-color: rgb(232, 232, 232);
   border-radius: 24px;
 }
