--- a/app/assets/stylesheets/yachts/_yacht.scss
+++ b/app/assets/stylesheets/yachts/_yacht.scss
@@ -53,14 +53,17 @@ body{
 
 // Yacht Card Style
 .yacht-card{
-  margin-bottom: 30px;
   border-radius: 8px;
   border: none;
   font-size: 12px;
-  height: 55vh;
+  height: 100%;
   overflow: hidden;
   box-shadow: 0px 0px 5px rgb(219, 219, 219);
   transition: 0.5s;
+}
+
+.yachts-card-separation{
+  margin-bottom: 10%;
 }
 
 .yacht-card:hover{
@@ -149,7 +152,7 @@ body{
 
 .index-card-button{
   margin-top: 2vh;
-  padding: 1vh 23vh;
+  padding: 1vh 2.3vh;
   background-color: rgb(232, 232, 232);
   border-radius: 24px;
 }
@@ -166,8 +169,6 @@ body{
 .second-show-card{
   border-radius: 8px;
 }
-
-
 
 @media only screen and (max-width: 1100px) {
   .index-map-container{
