--- a/app/views/shared/_search-navbar.html.erb
+++ b/app/views/shared/_search-navbar.html.erb
@@ -37,7 +37,7 @@
         <li class="nav-item">
         </li>
         <li class="nav-item dropdown">
-          <%= image_tag "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1tBTK3u7sDWpZWSd_eDJM4gealRBfdrzAXtPhtbk-MzAI0hXCihcHeQECWLhQtCtKSAw&usqp=CAU", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://res.cloudinary.com/dnxriaa8a/image/upload/v1637328402/anchor_image_ctaylt.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "My Profile", "profile", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
