--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/navbar' %>
 <% # container of the page %>
-<div class="container justify-content-around align-items-center">
+<div class="container justify-content-around align-items-center" id ="container-special">
   <div class="row justify-content-center">
     <% # CARD container %>
     <div class="first-show-card bg-white rounded shadow col-12 col-lg-5 col-xl-4" id="card">
