--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,96 +1,96 @@
 <%= render 'shared/navbar' %>
+<div id="container-special">
+  <%# WELCOME TITLE %>
+  <div class="welcome-name">
+    <svg viewbox="0 0 100 30">
+      <defs>
+        <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="0.5">
+          <stop offset="5%" stop-color="#00aeff"/>
+          <stop offset="95%" stop-color="#819eff"/>
+        </linearGradient>
+        <pattern id="wave" x="0" y="0" width="100" height="20" patternUnits="userSpaceOnUse">
+          <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)">
+            <animateTransform
+                attributeName="transform"
+                begin="0s"
+                dur="1.5s"
+                type="translate"
+                from="0,0"
+                to="40,0"
+                repeatCount="indefinite" />
+          </path>
+        </pattern>
+      </defs>
+      <text text-anchor="middle" x="50" y="15" font-size="12" fill="url(#wave)"  fill-opacity="0.9">Welcome <%= @user.first_name.capitalize %>!</text>
+      <text text-anchor="middle" x="50" y="15" font-size="12" fill="url(#gradient)" fill-opacity="0.2">Welcome <%= @user.first_name.capitalize %>!</text>
+    </svg>
+  </div>
 
-<%# WELCOME TITLE %>
-<div class="welcome-name">
-  <svg viewbox="0 0 100 30">
-    <defs>
-      <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="0.5">
-        <stop offset="5%" stop-color="#00aeff"/>
-        <stop offset="95%" stop-color="#819eff"/>
-      </linearGradient>
-      <pattern id="wave" x="0" y="0" width="100" height="20" patternUnits="userSpaceOnUse">
-        <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)">
-          <animateTransform
-              attributeName="transform"
-              begin="0s"
-              dur="1.5s"
-              type="translate"
-              from="0,0"
-              to="40,0"
-              repeatCount="indefinite" />
-        </path>
-      </pattern>
-    </defs>
-    <text text-anchor="middle" x="50" y="15" font-size="12" fill="url(#wave)"  fill-opacity="0.9">Welcome <%= @user.first_name.capitalize %>!</text>
-    <text text-anchor="middle" x="50" y="15" font-size="12" fill="url(#gradient)" fill-opacity="0.2">Welcome <%= @user.first_name.capitalize %>!</text>
-  </svg>
-</div>
 
-
-<div class="profile-cards-container container-fluid">
-  <div class="row justify-content-evenly">
-    <div class="col-12 col-lg-6">
-      <%# PROFILE CARDS %>
-      <div class="profile-individual-card">
-        <div class="card-body">
-          <h5 class="card-title"></h5>
-          <div class="card-bottom d-flex justify-content-between">
-            <div id="page-greener">
-            <h4>My Profile Info</h4>
-            <br>
-              <p style="font-size:16px;" class="card-text"><strong style="color:#333333;">Name:</strong>  <%= @user.first_name.capitalize %></p>
-              <p style="font-size:16px;" class="card-text"><strong style="color:#333333;">Last Name:</strong> <%= @user.last_name.capitalize %></p>
-              <p style="font-size:16px;" class="card-text"><strong style="color:#333333;">Email:</strong> <%= @user.email %></p>
-              <p style="font-size:16px;" class="card-text"><strong style="color:#333333;">Location:</strong> <%= @user.location.capitalize %></p>
-              <%# button edit %>
-              <div class="edit-btn">
-                <%= link_to edit_user_registration_path do%>
-                <button class="btn btn-light index-card-button">Edit</button>
-                <% end %>
+  <div class="profile-cards-container container-fluid">
+    <div class="row justify-content-evenly">
+      <div class="col-12 col-lg-6">
+        <%# PROFILE CARDS %>
+        <div class="profile-individual-card">
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <div class="card-bottom d-flex justify-content-between">
+              <div id="page-greener">
+              <h4>My Profile Info</h4>
+              <br>
+                <p style="font-size:16px;" class="card-text"><strong style="color:#333333;">Name:</strong>  <%= @user.first_name.capitalize %></p>
+                <p style="font-size:16px;" class="card-text"><strong style="color:#333333;">Last Name:</strong> <%= @user.last_name.capitalize %></p>
+                <p style="font-size:16px;" class="card-text"><strong style="color:#333333;">Email:</strong> <%= @user.email %></p>
+                <p style="font-size:16px;" class="card-text"><strong style="color:#333333;">Location:</strong> <%= @user.location.capitalize %></p>
+                <%# button edit %>
+                <div class="edit-btn">
+                  <%= link_to edit_user_registration_path do%>
+                  <button class="btn btn-light index-card-button">Edit</button>
+                  <% end %>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-12 col-lg-6">
-      <%# PROFILE CARDS %>
-      <div class="boat-individual-card">
-        <div class="card-body profile-boat-card-body">
-            <img src="<%= @yachts.sample.image_url %>" class="profile-boat-image" alt="...">
+      <div class="col-12 col-lg-6">
+        <%# PROFILE CARDS %>
+        <div class="boat-individual-card">
+          <div class="card-body profile-boat-card-body">
+              <img src="<%= @yachts.sample.image_url %>" class="profile-boat-image" alt="...">
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<%# MY RESERVATIONS TABLE %>
-<div class="reservations-container">
-  <div id="page-reder">
-    <p> <strong>My Reservations </strong></p>
-    <table class="table table-hover" >
-      <div>
-        <thead>
-          <tr class="row" id="table-yellower">
-            <th scope="col">Yacht</th>
-            <th scope="col">Date</th>
-            <th scope="col">Total Price</th>
-            <th scope="col">Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @user_bookings.each do |booking|%>
-            <tr class="row"id="table-pinker">
-            <td scope="col"> <%= @yachts.select { |yacht| yacht.id == booking.yacht_id}[0].name %> </td>
-            <td scope="col"><%= booking.start_date %> </td>
-            <% total_price = ((booking.end_date - booking.start_date).to_i) * @yachts.select { |yacht| yacht.id == booking.yacht_id}[0].price %>
-            <td scope="col"> € <%= number_with_delimiter(total_price, :delimiter => ',')  %> </td>
-            <td scope="col"><%= booking.status %> </td>
+  <%# MY RESERVATIONS TABLE %>
+  <div class="reservations-container">
+    <div id="page-reder">
+      <p> <strong>My Reservations </strong></p>
+      <table class="table table-hover" >
+        <div>
+          <thead>
+            <tr class="row" id="table-yellower">
+              <th scope="col">Yacht</th>
+              <th scope="col">Date</th>
+              <th scope="col">Total Price</th>
+              <th scope="col">Status</th>
             </tr>
-          <%end%>
-        </tbody>
-      </div>
-    </table>
+          </thead>
+          <tbody>
+            <% @user_bookings.each do |booking|%>
+              <tr class="row"id="table-pinker">
+              <td scope="col"> <%= @yachts.select { |yacht| yacht.id == booking.yacht_id}[0].name %> </td>
+              <td scope="col"><%= booking.start_date %> </td>
+              <% total_price = ((booking.end_date - booking.start_date).to_i) * @yachts.select { |yacht| yacht.id == booking.yacht_id}[0].price %>
+              <td scope="col"> € <%= number_with_delimiter(total_price, :delimiter => ',')  %> </td>
+              <td scope="col"><%= booking.status %> </td>
+              </tr>
+            <%end%>
+          </tbody>
+        </div>
+      </table>
+    </div>
   </div>
 </div>
-
 <%= render "footer" %>
